--- a/progdemo1/build.gradle
+++ b/progdemo1/build.gradle
@@ -1,6 +1,9 @@
 
 
 dependencies {
+    api project(':progcomm')
+    implementation 'dev.langchain4j:langchain4j:0.29.0'
+    implementation 'dev.langchain4j:langchain4j-ollama:0.29.0'
 
 }
 
