--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ plugins {
 }
 
 
+
 subprojects {
 
     apply plugin: 'java'
@@ -79,12 +80,22 @@ subprojects {
         }
     }
 
+    configurations.all {
+        exclude group: 'ch.qos.logback', module: 'logback-classic'
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
+    }
+
     dependencies  {
         implementation 'org.projectlombok:lombok:1.18.30'
         annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
-        implementation 'org.springframework.boot:spring-boot-starter'
+        implementation 'org.springframework.boot:spring-boot-starter-aop'
         implementation 'org.springframework.boot:spring-boot-starter-web'
+        implementation ('org.springframework.boot:spring-boot-starter') {
+            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+        }
+        implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+
     }
 
 
@@ -105,5 +116,6 @@ subprojects {
             println("******** 已清理模块 ********")
         }
     }
+
 }
 
