--- a/progdemo1/src/main/resources/application.yml
+++ b/progdemo1/src/main/resources/application.yml
@@ -5,3 +5,11 @@ llm:
   ollama:
     url: http://10.12.0.8:11434
     model: qwen2.5:1.5b
+
+jdbc:
+  sources:
+    - url: jdbc:mysql://10.11.0.222:3306/erp-global?
+      username: root
+      password: 666
+
+
