--- a/progdemo1/build.gradle
+++ b/progdemo1/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     api project(':progcomm')
     implementation 'dev.langchain4j:langchain4j:0.29.0'
     implementation 'dev.langchain4j:langchain4j-ollama:0.29.0'
+    implementation 'dev.langchain4j:langchain4j-open-ai:0.29.0'
 
 }
 
