--- a/progdemo1/build.gradle
+++ b/progdemo1/build.gradle
@@ -1,7 +1,7 @@
 
 
 dependencies {
-    api project(':progcomm')
+    api project(':myspr')
     implementation 'dev.langchain4j:langchain4j:0.29.0'
     implementation 'dev.langchain4j:langchain4j-ollama:0.29.0'
     implementation 'dev.langchain4j:langchain4j-open-ai:0.29.0'
