--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,4 @@
-SHODOW_COMPLETE_JAR_DIR=../shodowjars
+# ????
+org.gradle.warning.mode=none
+gradle.startParameter.warningMode = WarningMode.All
+COMPLETE_JAR_DIR=jardir
