--- a/mydep/build.gradle
+++ b/mydep/build.gradle
@@ -1,6 +1,9 @@
 
 
 dependencies {
+    // 日志
+    implementation 'org.slf4j:slf4j-api:2.0.9'
+
     // json解析
     api 'com.google.code.gson:gson:2.9.0'
 
