--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,6 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7' apply false
 }
 
-
-
-
-
 allprojects {
     repositories {
         maven{ url = 'https://maven.aliyun.com/repository/public'}
@@ -34,8 +30,8 @@ subprojects { sub ->
     version = '0.0.1-SNAPSHOT'
 
     java {
-        sourceCompatibility = JavaVersion.VERSION_21
-        targetCompatibility = JavaVersion.VERSION_21
+        sourceCompatibility = JavaVersion.VERSION_22
+        targetCompatibility = JavaVersion.VERSION_22
     }
 
 
@@ -87,10 +83,11 @@ subprojects { sub ->
         }
     }
 
-    configurations.configureEach {
-        exclude group: 'ch.qos.logback', module: 'logback-classic'
-        exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
-    }
+    // 用于移除logback日志依赖
+//    configurations.configureEach {
+//        exclude group: 'ch.qos.logback', module: 'logback-classic'
+//        exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
+//    }
 
 
     if (sub.name == 'mydep') {
@@ -103,7 +100,13 @@ subprojects { sub ->
     apply plugin: 'io.spring.dependency-management'
 
 
-    // bom版本查询: https://spring.io/projects/spring-cloud-alibaba https://sca.aliyun.com/docs/2023/overview/version-explain/
+    // bom版本查询:
+    // https://spring.io/projects/spring-cloud
+    // https://spring.io/projects/spring-cloud-alibaba
+    // https://sca.aliyun.com/docs/2023/overview/version-explain/
+
+    // https://www.cnblogs.com/zhulw/articles/18868321 # Spring Boot 与 Spring Cloud 的版本兼容策略与 Maven BOM 管理全解析
+
     dependencyManagement {
         imports {
             mavenBom(SpringBootPlugin.BOM_COORDINATES)
@@ -111,9 +114,13 @@ subprojects { sub ->
 //            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2024.0.0"
 //            mavenBom "com.alibaba.cloud:spring-cloud-alibaba-dependencies:2024.0.0.0"
 
+
+            //   spring-cloud = 2025.0.x   Spring Boot = 3.5.x
             mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
             mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2025.0.0'
-            mavenBom 'com.alibaba.cloud:spring-cloud-alibaba-dependencies:2023.0.1.3'
+//            mavenBom 'com.alibaba.cloud:spring-cloud-alibaba-dependencies:2023.0.1.3'
+            mavenBom 'com.alibaba.cloud:spring-cloud-alibaba-dependencies:2023.0.3.4'
+//            mavenBom 'com.alibaba.cloud:spring-cloud-alibaba-dependencies:2025.0.0.0'
 
         }
     }
@@ -121,23 +128,38 @@ subprojects { sub ->
 
 
     dependencies {
+//        // nacos 服务注册发现
+//        implementation ('com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery') {
+//            exclude group: 'ch.qos.logback', module: 'logback-classic'
+//        }
+//        // nacos 配置中心
+//        implementation ('com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config') {
+//            exclude group: 'ch.qos.logback', module: 'logback-classic'
+//        }
+
         // boot核心
-        implementation('org.springframework.boot:spring-boot-starter') {
-            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-        }
-        // 使用log4j2
-        implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+//        implementation('org.springframework.boot:spring-boot-starter') {
+//            // 移除logback
+//            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+//        }
+//        // 使用log4j2
+//        implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+
+
+        // boot核心 含logback日志依赖
+        implementation 'org.springframework.boot:spring-boot-starter'
+
         // web容器
         implementation 'org.springframework.boot:spring-boot-starter-web'
         // aop切面
         implementation 'org.springframework.boot:spring-boot-starter-aop'
-        // 测试类
-        testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-
 
         implementation 'org.projectlombok:lombok:1.18.30'
         annotationProcessor 'org.projectlombok:lombok:1.18.30'
+
+
+        // 测试类
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
 
 
